hphp/hack/test/typecheck/let/let_await.php.like_types.exp
File "let_await.php", line 4, characters 13-15:
Wrong type hint (Typing[4110])
File "let_await.php", line 4, characters 13-15:
Expected int
File "let_await.php", line 3, characters 30-32:
But got dynamic because it is an unenforceable type
