hphp/hack/test/typecheck/let/let_await.php
<?hh // strict

async function foo(Awaitable<int> $i): Awaitable<void> {
  let val : int = await $i;
}
